@@ -20,11 +20,15 @@ var tabs = [
     {'name':'vboxTabVMSnapshots','content':'tabVMSnapshots','label':'Snapshots','icon':'take_snapshot'}
 ];
 
+
 var tabsMain = new vboxTabs('tabMainContent');
 
 var tabLoader = new vboxLoader();
 
 for(var i = 0; i < tabs.length; i++) {
+
+	// Flash RDP console does not work in IE.
+	if($.browser.msie && tabs[i].name == 'vboxTabVMConsole') continue;
 
 	// Tab disabled?
 	if($('#vboxIndex').data('vboxConfig')['disable' + tabs[i].name.substring(4)])
@@ -44,6 +48,9 @@ for(var i = 0; i < tabs.length; i++) {
 tabLoader.onLoad = function(){
 
 	for(var i = 0; i < tabs.length; i++) {
+
+		// Flash RDP console does not work in IE.
+		if($.browser.msie && tabs[i].name == 'vboxTabVMConsole') continue;
 
 		// Tab disabled?
 		if($('#vboxIndex').data('vboxConfig')['disable' + tabs[i].name.substring(4)])
@@ -155,7 +162,7 @@ function vboxTabs(id) {
 			$('#tablistMain').children().first().removeClass('vboxDisabled');
 			$('#tablistMain').children().last().removeClass('vboxDisabled');
 			
-			if(self.tabSelected == '#'+self.tabs[1].name)
+			if(self.tabSelected == '#vboxTabVMConsole')
 				self.showTab('#'+self.tabs[0].name);
 
 		// VM with console
